feat: support SFTP
Refs #10
Refs #9
Refs #6